@@ -12,4 +12,3 @@ Thom van Os           <thom@vanos.com>
 Andreas Wacker        <andreas100@methodstudios.com>
 Artur Zaprzala        <zybi@users.sourceforge.net>
 Dan Dennedy           <dan@dennedy.org>
-
